--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -37,6 +37,8 @@ jobs:
           node-version: 18
       - name: Build
         run:
+          npm
+          npm i
           npm run build
       - name: Setup Pages
         uses: actions/configure-pages@v3
@@ -44,7 +46,7 @@ jobs:
         uses: actions/upload-pages-artifact@v1
         with:
           # Upload entire repository
-          path: 'build'
+          path: "build"
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v2
