--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -35,11 +35,10 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 18
+      - name: Install dependencies
+        run: npm && npm i
       - name: Build
-        run:
-          npm
-          npm i
-          npm run build
+        run: npm run build
       - name: Setup Pages
         uses: actions/configure-pages@v3
       - name: Upload artifact
