--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -36,7 +36,7 @@ jobs:
         with:
           node-version: 18
       - name: Install dependencies
-        run: npm && npm i
+        run: npm i
       - name: Build
         run: npm run build
       - name: Setup Pages
