Fix every single eslint error

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
     "target": "ESNext",
     "esModuleInterop": true,
     "jsx": "react-jsx",
-    "moduleResolution": "nodenext"
+    "moduleResolution": "nodenext",
+    "strictNullChecks": true
   },
   "include": ["@*/*", "./src/*"],
   "exclude": ["node_modules"]
