--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "gubanevs-book-of-recipes",
-  "author": {"name": "Alex Garrity"},
+  "author": {
+    "name": "Alex Garrity"
+  },
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -59,5 +61,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://alexgarrity.github.io/gubanevs-book-of-pastry/",
+  "homepage": "https://alexgarrity.github.io/gubanevs-book-of-pastry/"
 }
